# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
johns_pre_commit_hooks/: __init__.py  no_push_squash_commits.py  no_push_wip_commits.py
